--- a/index.html
+++ b/index.html
@@ -364,7 +364,22 @@
                         <a href="#"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                          <a href="https://www.tiktok.com/@kidambu?t=ZM-8yGOb65DNkU&r=1" target="_blank" title="TikTok">
+    <i class="fab fa-tiktok" style="font-size: 24px;"></i>
+  </a>
+  
+  <a href="https://www.facebook.com/clement.kidambu" target="_blank" title="Facebook">
+    <i class="fab fa-facebook" style="font-size: 24px;"></i>
+  </a>
+  
+  <a href="https://www.instagram.com/trclem25?igsh=NjhodXpqMXJhcGhu" target="blank" title="Instagram">
+    <i class="fab fa-instagram" style="font-size: 24px;"></i>
+  </a>
+
+  <!-- Email Button -->
+  <a href="mailto:your-email@example.com" title="Send Email">
+    <i class="fas fa-envelope" style="font-size: 24px;"></i>
+  </a>
                     </div>
                 </div>
                 <div class="footer-links">
