--- a/index.html
+++ b/index.html
@@ -419,6 +419,10 @@
             </div>
         </div>
     </footer>
+    <!-- WhatsApp Floating Icon -->
+<a href="https://wa.me/message/PYT4HPNBYOTYO1" target="_blank" id="whatsapp-icon">
+  <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp" />
+</a>
 
     <!-- Custom Script -->
     <script src="script.js"></script>
