--- a/index.html
+++ b/index.html
@@ -420,9 +420,12 @@
         </div>
     </footer>
     <!-- WhatsApp Floating Icon -->
-<a href="https://wa.me/message/PYT4HPNBYOTYO1" target="_blank" id="whatsapp-icon">
+    <div class="whatsapp-icon">
+        <a href="https://wa.me/message/PYT4HPNBYOTYO1" target="_blank" id="whatsapp-icon">
   <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp" />
-</a>
+        </a>
+    </div>
+
 
     <!-- Custom Script -->
     <script src="script.js"></script>
