--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
     <!-- WhatsApp Floating Icon -->
     <div class="whatsapp-icon">
         <a href="https://wa.me/message/PYT4HPNBYOTYO1" target="_blank" id="whatsapp-icon">
-  <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="WhatsApp" />
-        </a>
+            <i class="fa fa-whatsapp"></i>
+      </a>
     </div>
 
 
