--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     </footer>
     <!-- WhatsApp Floating Icon -->
     <div class="whatsapp-icon">
-        <a href="https://wa.me/message/PYT4HPNBYOTYO1" target="_blank" id="whatsapp-icon">
+        <a href="https://wa.me/message/PYT4HPNBYOTYO1">
             <i class="fa fa-whatsapp"></i>
       </a>
     </div>
