--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <!-- WhatsApp Floating Icon -->
     <div class="whatsapp-icon">
         <a href="https://wa.me/message/PYT4HPNBYOTYO1">
-            <i class="fa fa-whatsapp"></i>
+            <i class="fab fa-whatsapp"></i>
       </a>
     </div>
 
