--- a/index.html
+++ b/index.html
@@ -421,9 +421,7 @@
     </footer>
     <!-- WhatsApp Floating Icon -->
     <div class="whatsapp-icon">
-        <a href="https://wa.me/message/PYT4HPNBYOTYO1">
-            <i class="fab fa-whatsapp"></i>
-      </a>
+        <a href="https://wa.me/message/PYT4HPNBYOTYO1"><i class="fab fa-whatsapp"></i></a>
     </div>
 
 
