--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
                     Where imagination meets intelligence. We don't just design websites and graphics—we forge identities and shape the digital soul of tomorrow.
                 </p>
                 <div class="hero-buttons">
-                    <button class="btn-primary" onclick="scrollToSection('contact')">
+                    <button class="btn-primary">
                         <i class="fas fa-rocket"></i>
-                        Start Your Journey
+                        <a href="https://kidambu-ai-craft.lovable.app/">
+Start Your Journey!
+                     </a>
                     </button>
                     <button class="btn-secondary" onclick="scrollToSection('portfolio')">
                         <i class="fas fa-eye"></i>
