--- a/index.html
+++ b/index.html
@@ -371,7 +371,9 @@ Start Your Journey!
                     </div>
                     <button type="submit" class="btn-primary">
                         <i class="fas fa-paper-plane"></i>
-                        Launch Project
+                        <a href="https://kidambu-ai-craft.lovable.app/">
+                            Launch Project
+                        </a>
                     </button>
                 </form>
             </div>
